# app/router/routes/routes.go
@@ -13,12 +13,13 @@ func RegisterRoutes(app *fiber.App, handler *handler.Handler) {
 	auth := apiV1.Group("/auth")
 	auth.Post("/signup", handler.SignUp)
 	auth.Post("/login", handler.Login)
+	auth.Get("renew-token", handler.RenewToken)
 	auth.Get("/verify-email/:id/:token", handler.VerifyEmail)
 	/* -------------------- Auth Routes Ends -------------------- */
 
 	/* -------------------- User Routes Begins -------------------- */
 	user := apiV1.Group("/users")
-	user.Use(middlewares.New(middlewares.NewDefaultConfig()))
+	user.Use(middlewares.New(middlewares.NewPasetoDefaultConfig()))
 	user.Get("/:username", handler.GetUserByUsername)
 	user.Put("/:username", handler.UpdateUser)
 	user.Put("/:username/password", handler.UpdatePassword)
